--- a/public/stylesheets/mindfk.css
+++ b/public/stylesheets/mindfk.css
@@ -37,10 +37,7 @@ body {
 .user-creator {
     font-weight: bold;
 }
-.text-center{
-    padding-bottom: 50px;
-    text-align: center;
-}
+
 
 .bg-red{
     background-color: #E08282;
@@ -103,6 +100,8 @@ body {
 
 .name {
     text-transform: capitalize;
+    overflow: hidden;
+    text-overflow:ellipsis;
 }
 
 .img-circle{
@@ -111,4 +110,97 @@ body {
 
 .user-turn {
     background-color: #B8D0AF !important;
+}
+
+.text-center{
+    padding-bottom: 50px;
+    text-align: center;
+}
+ul.baraja-container {
+    width: 100px;
+    height: 125px;
+    margin: 15px 30px;
+    position: relative;
+    padding: 0;
+    list-style-type: none;
+    display: inline-block;
+}
+
+ul.baraja-container li {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    background: #fff;
+    pointer-events: auto;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.profession {
+    overflow: hidden;
+}
+
+/* responsive text queries */
+@media screen and (max-width: 992px) {
+    h1 {
+        font-size: 24px;  
+    }
+    h2 {
+        font-size: 22px;  
+    }
+    h3 {
+        font-size: 18px;  
+    }
+    .text-center{
+        text-align: center;
+    }
+    ul.baraja-container {
+        width: 100px;
+        height: 125px;
+        margin: 15px 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 22px;  
+    }
+    h2 {
+        font-size: 20px;  
+    }
+    h3 {
+        font-size: 18px;  
+    }
+
+    h3 {
+        font-size: 16px;  
+    }
+    hr {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .content .name {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .text-center{
+        padding-bottom: 0px;
+        text-align: center;
+    }
+    ul.baraja-container {
+        width: 60px;
+        height: 75px;
+        margin: 15px 20px;
+    }
+    .card-show li{
+        margin: 10px;
+        cursor: pointer;
+    }
 }
